--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>EMF-REST</title>
+    <title>Bad Presentation Bingo</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="css/bootstrap.css" rel="stylesheet" media="screen">
     <!--<link href="css/bootstrap-theme.css" rel="stylesheet" media="screen">-->
@@ -25,7 +25,7 @@
     <script src="js/angular.min.js"></script>
     <script src="js/angular-cookies.min.js"></script>
     <script src="js/firebase.js"></script>
-    <script src="js/angularfire.min.js"></script>
+    <script src="js/angularfire-0.3-12092013.js"></script>
     <script src="js/script.js"></script>
   </body>
 </html>
